LBR per CPU (HV); proc->thread callback event logic

--- a/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
+++ b/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
@@ -285,6 +285,7 @@
     <ClCompile Include="StdAfx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Common\base\AutoMalloc.h" />
     <ClInclude Include="..\Common\base\Common.h" />
     <ClInclude Include="..\Common\base\ComparableId.hpp" />
     <ClInclude Include="..\Common\base\instrinsics.h" />
