ported to x64 only mode; need to clean up messy code ..

--- a/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
+++ b/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
@@ -334,13 +334,13 @@
     <MASM Include="..\Common\amd64\_instrinsics.asm">
       <FileType>Document</FileType>
     </MASM>
-    <MASM Include="src\amd64\ext_interface.asm" />
     <MASM Include="src\amd64\_syscall.asm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Common\amd64\common.inc">
       <FileType>Document</FileType>
     </None>
+    <None Include="..\Common\FastCall\FastCall.inc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cronos\Cronos.vcxproj">
