moving x64 only mode tracing finalizing .. need just some clean up!... added freeze up app at startup even if EP is not catched at the time.

--- a/src/InAppFuzzDbiModule/InAppFuzzDbiModule/InAppFuzzDbiModule.vcxproj
+++ b/src/InAppFuzzDbiModule/InAppFuzzDbiModule/InAppFuzzDbiModule.vcxproj
@@ -107,7 +107,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalOptions>/EXPORT:ExtTrapTrace /EXPORT:ExtMain %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/EXPORT:ExtTrapTrace /EXPORT:ExtHook %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
