--- a/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
+++ b/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>C:\Program Files (x86)\Windows Kits\8.0\Include\shared;C:\Program Files (x86)\Windows Kits\8.0\Include\km;C:\Program Files (x86)\Windows Kits\8.0\Include\um;%(AdditionalIncludeDirectories);$(ProjectDir)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>DBG; DEBUG; _DEBUG; WIN64; _WIN64;_M_AMD64;_AMD_64_; %(PreprocessorDefinitions); HYPERVISOR;</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG_MODE;DBG; DEBUG; _DEBUG; WIN64; _WIN64;_M_AMD64;_AMD_64_; %(PreprocessorDefinitions); HYPERVISOR;</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
