--- a/src/Cronos/Cronos.vcxproj
+++ b/src/Cronos/Cronos.vcxproj
@@ -137,7 +137,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>C:\Program Files (x86)\Windows Kits\8.0\Include\shared;C:\Program Files (x86)\Windows Kits\8.0\Include\km;C:\Program Files (x86)\Windows Kits\8.0\Include\um;%(AdditionalIncludeDirectories);$(ProjectDir)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>DBG; DEBUG; _DEBUG; WIN64; _WIN64; _M_AMD64; _AMD_64_;  HYPERVISOR; %(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG_MODE;DBG; DEBUG; _DEBUG; WIN64; _WIN64; _M_AMD64; _AMD_64_;  HYPERVISOR; %(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -259,6 +259,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Common\base\Common.cpp" />
     <ClCompile Include="..\Common\base\libc.cpp" />
     <ClCompile Include="src\Cronos.cpp" />
     <ClCompile Include="StdAfx.cpp" />
@@ -268,6 +269,7 @@
     <ClInclude Include="..\Common\base\instrinsics.h" />
     <ClInclude Include="..\Common\CPU\msr.h" />
     <ClInclude Include="..\Common\utils\ProcessorWalker.hpp" />
+    <ClInclude Include="..\Common\utils\Range.h" />
     <ClInclude Include="drv_common.h" />
     <ClInclude Include="src\Cronos.h" />
     <ClInclude Include="StdAfx.h" />
