--- a/src/Cronos/Cronos.vcxproj.filters
+++ b/src/Cronos/Cronos.vcxproj.filters
@@ -8,6 +8,9 @@
     <ClCompile Include="src\Cronos.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Common\base\Common.cpp">
+      <Filter>Common\base</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drv_common.h" />
@@ -25,6 +28,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\Common\utils\ProcessorWalker.hpp">
+      <Filter>Common\utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Common\utils\Range.h">
       <Filter>Common\utils</Filter>
     </ClInclude>
   </ItemGroup>
