som bugfixes, add freeze thread func + freeze all thread of target at begining!; NECESSARY TO REFACTOR -> mainly .py frmwk bindings!

--- a/src/InAppFuzzDbiModule/InAppFuzzDbiModule/InAppFuzzDbiModule.vcxproj
+++ b/src/InAppFuzzDbiModule/InAppFuzzDbiModule/InAppFuzzDbiModule.vcxproj
@@ -76,6 +76,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(ProjectDir)$(Configuration)-amd64\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -109,6 +110,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalOptions>/EXPORT:ExtTrapTrace %(AdditionalOptions)</AdditionalOptions>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y $(OutDir)$(ProjectName)$(TargetExt) $(OutDir)..\..\..\x64\Debug\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
