--- a/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
+++ b/src/DbiFuzzFrameworkR0/DbiFuzzFrameworkR0.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>C:\Program Files (x86)\Windows Kits\8.0\Include\shared;C:\Program Files (x86)\Windows Kits\8.0\Include\km;C:\Program Files (x86)\Windows Kits\8.0\Include\um;%(AdditionalIncludeDirectories);$(ProjectDir)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_DEBUG_MODE;DBG; DEBUG; _DEBUG; WIN64; _WIN64;_M_AMD64;_AMD_64_; %(PreprocessorDefinitions); HYPERVISOR;</PreprocessorDefinitions>
+      <PreprocessorDefinitions>DBG; DEBUG; _DEBUG; WIN64; _WIN64;_M_AMD64;_AMD_64_; %(PreprocessorDefinitions); HYPERVISOR;</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -189,6 +189,9 @@
       <ShowProgress>LinkVerboseLib</ShowProgress>
       <TreatLinkerWarningAsErrors>false</TreatLinkerWarningAsErrors>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y $(OutDir)$(ProjectName)$(TargetExt) $(OutDir)..\..\x64\Debug\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
