--- a/src/InAppFuzzDbiModule/InAppFuzzDbiModule/InAppFuzzDbiModule.vcxproj
+++ b/src/InAppFuzzDbiModule/InAppFuzzDbiModule/InAppFuzzDbiModule.vcxproj
@@ -146,7 +146,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalOptions>/EXPORT:ExtMain /EXPORT:ExtTrapTrace %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/EXPORT:ExtTrapTrace %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
